--- a/itMentors/Storyboards/RenatPart.storyboard
+++ b/itMentors/Storyboards/RenatPart.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oCz-iV-pkG">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -106,10 +106,10 @@
             </objects>
             <point key="canvasLocation" x="4219" y="929"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Mentor Tab Bar View Controller-->
         <scene sceneID="G7n-s8-COC">
             <objects>
-                <tabBarController id="oCz-iV-pkG" sceneMemberID="viewController">
+                <tabBarController id="oCz-iV-pkG" customClass="MentorTabBarViewController" customModule="itMentors" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="2EK-C5-FDN"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sCY-UA-i7f">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
