--- a/itMentors/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/itMentors/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -15,16 +15,30 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="getMeIt" translatesAutoresizingMaskIntoConstraints="NO" id="uk3-2f-DU8">
+                                <rect key="frame" x="20" y="266" width="374" height="374"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="uk3-2f-DU8" secondAttribute="height" multiplier="1:1" id="vQh-BI-5qc"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="uk3-2f-DU8" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="boZ-gD-2wz"/>
+                            <constraint firstItem="uk3-2f-DU8" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.417411" id="xww-vc-Zoz"/>
+                            <constraint firstItem="uk3-2f-DU8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="z6f-cu-u2Y"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
+        <image name="getMeIt" width="640" height="640"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
