--- a/itMentors/Storyboards/Base.lproj/Main.storyboard
+++ b/itMentors/Storyboards/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0iq-uI-vSJ">
-                                <rect key="frame" x="96" y="537" width="128.5" height="31"/>
+                                <rect key="frame" x="96" y="521" width="128.5" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="Developer Team"/>
                                 <connections>
@@ -70,7 +70,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="va5-YV-yfa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="bA0-dX-63w"/>
-                            <constraint firstItem="0iq-uI-vSJ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="g4Q-KH-kbv"/>
+                            <constraint firstItem="0iq-uI-vSJ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="-16" id="g4Q-KH-kbv"/>
                             <constraint firstItem="WT4-LG-uSD" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="mRl-jh-w4h"/>
                             <constraint firstItem="va5-YV-yfa" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="nQg-9K-KUJ"/>
                             <constraint firstItem="WT4-LG-uSD" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ndN-pM-0ap"/>
@@ -138,6 +138,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="WN4-0G-bd1" kind="show" id="YmL-Gi-Hoc"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -150,6 +153,60 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="haZ-mx-fuB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-368" y="1454"/>
+        </scene>
+        <!--Developer View Controller-->
+        <scene sceneID="4cb-HO-nat">
+            <objects>
+                <viewController id="WN4-0G-bd1" customClass="DeveloperViewController" customModule="itMentors" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YO0-id-135" customClass="Deve">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KWn-uS-S74">
+                                <rect key="frame" x="60" y="72" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="WEn-DO-HlB"/>
+                                    <constraint firstAttribute="width" constant="200" id="jgt-KR-knK"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yu4-zd-qgt">
+                                <rect key="frame" x="70" y="449" width="180" height="33.5"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Написать в Telegram">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="telegramButtonTapped:" destination="WN4-0G-bd1" eventType="touchUpInside" id="QjF-TA-Hug"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhP-ir-cjt">
+                                <rect key="frame" x="139.5" y="288" width="41" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="18W-7x-vJ7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="yu4-zd-qgt" firstAttribute="centerY" secondItem="YO0-id-135" secondAttribute="centerY" multiplier="1.7" id="6JU-oN-qmt"/>
+                            <constraint firstItem="xhP-ir-cjt" firstAttribute="centerX" secondItem="YO0-id-135" secondAttribute="centerX" id="IxF-8Z-AkD"/>
+                            <constraint firstItem="KWn-uS-S74" firstAttribute="top" secondItem="18W-7x-vJ7" secondAttribute="top" constant="16" id="Pxb-iO-WQq"/>
+                            <constraint firstItem="KWn-uS-S74" firstAttribute="centerX" secondItem="YO0-id-135" secondAttribute="centerX" id="hUi-UO-cEp"/>
+                            <constraint firstItem="xhP-ir-cjt" firstAttribute="top" secondItem="KWn-uS-S74" secondAttribute="bottom" constant="16" id="mWr-Ty-r5f"/>
+                            <constraint firstItem="yu4-zd-qgt" firstAttribute="centerX" secondItem="YO0-id-135" secondAttribute="centerX" id="zJj-ix-kP9"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="D69-Fi-13e"/>
+                    <connections>
+                        <outlet property="cityTextField" destination="xhP-ir-cjt" id="Djw-ZA-tUB"/>
+                        <outlet property="photoImageView" destination="KWn-uS-S74" id="5IM-Gj-p5p"/>
+                        <outlet property="telegramButton" destination="yu4-zd-qgt" id="PAG-Q9-avb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dOQ-IM-hpM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-370.09345794392522" y="2187.4730021598275"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="EPF-D0-S5H">
